[package]
name = "anchor-test-poc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_test_poc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"

[dev-dependencies]
solana-program = "1.9"
solana-program-test = "1.9"
solana-sdk = "1.9"
solana-logger = "1.9"
assert_matches = "1.4.0"
